Resource CSV settings implemented the same way as task settings